# pubmed-affiliation-scraper

./: README.md  pyproject.toml  results.csv
src/pubmed_scraper/: api.py  main.py  parser.py  writer.py
