[project]
name = "pubmed-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "sahil",email = "gandhesahil02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "xmltodict (>=0.14.2,<0.15.0)"
]

[tool.poetry]
packages = [{include = "pubmed_scraper", from = "src"}]


[tool.poetry.group.dev.dependencies]
email-validator = "^2.2.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_scraper.main:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
